--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/molekuler-kimyam/dist/main.jsx"></script>
-
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
